--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 	</parent>
 	<groupId>ineuron</groupId>
 	<artifactId>01-Boot-BasicApp</artifactId>
+	<packaging>war</packaging>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>demo</name>
 	<description>Demo project for Spring Boot</description>
